# cpp_experiments

./: basic_cin.cpp  compiletime_for.cpp  create_zeroed_file.cpp  env_tokens.cpp  lambda_function_registration.cpp  printf_generated_descriptor.cpp  regex.cpp  tokenizer.cpp  type_operator.cpp
auto_lambda_type_deduction/: CMakeLists.txt  main.cpp
c_callback_std_function/: CMakeLists.txt  main.cpp  mylib.c  mylib.h
contexts/: CMakeLists.txt  main.cpp
decorator/: CMakeLists.txt  main.cpp
shared_file/: CMakeLists.txt  consumer.cpp  data_structure.h  producer.cpp
